Adapt config.ini in the codebase

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [filepaths]
-joined_lfes = data/calculated/Joined_LFEs_w_phases.csv
+joined_lfes = ../data/calculated/Joined_LFEs_w_phases.csv
 ephemeris = ../data/raw/20040101000000_20170915115700_ephemeris.csv
 skr_poly_flux_all =../data/calculated/skr_poly_flux/poly_flux_combined.ncdf
 mag_phases = ../data/raw/mag_phases_2004_2017_final.sav
@@ -8,3 +8,9 @@ unet_catalogue = ../data/raw/unet_output/2004001_2017258_catalogue.json
 [folderpaths]
 skr_raw = ../data/raw/SKR_raw
 skr_poly_flux = ../data/calculated/skr_poly_flux
+
+[datapaths]
+raw = ../data/calculated
+calculated = ../data/raw
+
+[spice]
