Data processing organised and fixed

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,8 @@ ephemeris = ../data/raw/20040101000000_20170915115700_ephemeris.csv
 skr_poly_flux_all =../data/calculated/skr_poly_flux/poly_flux_combined.ncdf
 mag_phases = ../data/raw/mag_phases_2004_2017_final.sav
 unet_catalogue = ../data/raw/unet_output/2004001_2017258_catalogue.json
+unet_catalogue_csv = ../data/raw/unet_output/2004001_2017258_start_stop_times.csv
+lfe_detections = ../data/calculated/lfe_detections_unet.csv
 
 [folderpaths]
 skr_raw = ../data/raw/SKR_raw
