Added Autometa to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ integration_not_sorted/df_int_poly.csv
 integration_not_sorted/df_lin_all.csv
 integration_not_sorted/df_lin_poly.csv
 workflow.md
+Autometa
