Changed gitignore to include data folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
 .DS_Store
-data/
-SPICE/
 .python-version
+
+SPICE/
+AutoMeta/
+workflow.md
+
+data/calculated/*
+data/calculated/skr_poly_flux/*
+!data/calculated/skr_poly_flux
+
+data/raw/*
+data/raw/SKR_raw/*
+!data/raw/SKR_raw/
+
+
 integration_not_sorted/df_int_poly.csv
 integration_not_sorted/df_lin_all.csv
 integration_not_sorted/df_lin_poly.csv
-workflow.md
-Autometa
